# PaperPulse

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  paperpulse.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  digest.yml  release.yml
examples/: 2026-07-14.md  sample-digest.md
paperpulse/: __init__.py  api.py  cli.py  config.py  contradiction.py  crossref.py  digest.py  embeddings.py  fulltext.py  literature.py  market.py  models.py  pdf.py  pipeline.py  profile.py  rank.py  region.py  store.py  subscriptions.py  summarize.py  topics.py
paperpulse/community/: __init__.py  db.py
paperpulse/delivery/: __init__.py  email.py  rss.py  webhook.py
paperpulse/sources/: __init__.py  arxiv.py  base.py  biorxiv.py  pubmed.py  ssrn.py
paperpulse/trust/: __init__.py  external.py  heuristics.py  known_topics.py  publication.py  quant.py  results.py
tests/: test_api_filter.py  test_arxiv_parsing.py  test_backtest_flags.py  test_diff.py  test_digest_workflow.py  test_end_to_end_roadmap.py  test_first_run_ux.py  test_known_topics_semantic.py  test_literature_novelty.py  test_modules.py  test_ranking.py  test_region.py  test_ssrn_source.py  test_summarize_digest.py  test_topics.py  test_trust.py  test_trust_explainability.py  test_weak_result_validation.py
