[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperpulse"
version = "0.1.0"
description = "Relevance-ranked arXiv digests: the few papers that actually matter to you, summarised."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "viki22uied" }]
keywords = ["arxiv", "research", "digest", "nlp", "embeddings", "recommender"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]
llm = ["openai>=1.0", "anthropic>=0.30"]
pdf = ["pymupdf>=1.23"]
dev = ["pytest>=7.0"]
all = [
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "anthropic>=0.30",
    "pymupdf>=1.23",
]

[project.scripts]
paperpulse = "paperpulse.cli:main"

[project.urls]
Homepage = "https://github.com/viki22uied/PaperPulse"
Repository = "https://github.com/viki22uied/PaperPulse"
Issues = "https://github.com/viki22uied/PaperPulse/issues"

[tool.setuptools.packages.find]
include = ["paperpulse*"]
exclude = ["tests*"]
