[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperpulse"
dynamic = ["version"]  # single source of truth: paperpulse/__init__.py
description = "Relevance-ranked arXiv digests: the few papers that actually matter to you, summarised."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "viki22uied" }]
keywords = ["arxiv", "research", "digest", "nlp", "embeddings", "recommender"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.23,<3",
    "scikit-learn>=1.1,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2,<6"]
llm = ["openai>=1.0,<2", "anthropic>=0.30,<1"]
pdf = ["pypdf>=4.0,<6"]
dev = ["pytest>=7.0,<10", "mypy>=1.8,<2", "types-PyYAML"]
all = [
    "sentence-transformers>=2.2,<6",
    "openai>=1.0,<2",
    "anthropic>=0.30,<1",
    "pypdf>=4.0,<6",
]

[project.scripts]
paperpulse = "paperpulse.cli:main"

[project.urls]
Homepage = "https://github.com/viki22uied/PaperPulse"
Repository = "https://github.com/viki22uied/PaperPulse"
Issues = "https://github.com/viki22uied/PaperPulse/issues"

[tool.setuptools.dynamic]
version = { attr = "paperpulse.__version__" }

[tool.setuptools.packages.find]
include = ["paperpulse*"]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false

# Optional extras: guarded by try/except ImportError at their call sites and not
# installed in the base env, so mypy can't see them. Everything else must type.
[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "pypdf.*", "sklearn.*"]
ignore_missing_imports = true
